--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.5",
     "axios": "^1.9.0",
     "lucide-react": "^0.503.0",
     "react": "^19.0.0",
@@ -18,7 +17,6 @@
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.5.2",
     "socket.io-client": "^4.8.1",
-    "tailwindcss": "^4.1.5",
     "zustand": "^5.0.3",
     "@vitejs/plugin-react": "^4.4.1"
   },
@@ -26,11 +24,14 @@
     "@eslint/js": "^9.22.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
-    "daisyui": "^5.0.35",
+    "autoprefixer": "^10.4.21",
+    "daisyui": "^4.12.24",
     "eslint": "^9.22.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17",
     "vite": "^6.3.1"
   }
 }
