--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,8 +17,7 @@
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.5.2",
     "socket.io-client": "^4.8.1",
-    "zustand": "^5.0.3",
-    "@vitejs/plugin-react": "^4.4.1"
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
