--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "globals": "^16.0.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
-    "vite": "^6.3.1"
+    "vite": "^6.3.1",
+    "@vitejs/plugin-react": "^4.4.1"
   }
 }
